added font awesome

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./main.css">
+    <script src="https://kit.fontawesome.com/4f81b693f0.js" crossorigin="anonymous"></script>
     <title>Stylish Card</title>
 </head>
 
@@ -15,7 +16,7 @@
             <img class="thumbnail" src="./images/main-cover.png" alt="doom-cover-image">
             <h3 class="name">Doom Eternal</h3>
             <div class="stats">
-                <div class="viewers">666K</div>
+                <div class="viewers icon">666K</div>
                 <div class="streamers">
                     <img src="./images/44.jpg" alt="streamer-pic">
                     <img src="./images/57.jpg" alt="streamer-pic">
@@ -31,14 +32,17 @@
             <button class="btn">See more streams</button>
             <div class="streamers">
                 <div class="streamer">
+                    <div class="icon"><img src="./images/44.jpg" alt=""></div>
                     <p class="name">Gamer1</p>
                     <p class="number">10K</p>
                 </div>
                 <div class="streamer">
+                    <div class="icon"><img src="./images/57.jpg" alt=""></div>
                     <p class="name">Gamer2</p>
                     <p class="number">20K</p>
                 </div>
                 <div class="streamer">
+                    <div class="icon"><img src="./images/65.jpg" alt=""></div>
                     <p class="name">Gamer3</p>
                     <p class="number">30K</p>
                 </div>
