Added pulsing animation

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
             <img class="thumbnail" src="./images/main-cover.png" alt="doom-cover-image">
             <h3 class="name">Doom Eternal</h3>
             <div class="stats">
-                <div class="viewers icon">666K</div>
+                <div class="viewers icon-views">666K</div>
                 <div class="streamers">
                     <img src="./images/44.jpg" alt="streamer-pic">
                     <img src="./images/57.jpg" alt="streamer-pic">
